LU-11154 llite: use proper flags for FS_IOC_{FSSET,FSGET}XATTR

Two problems addressed by this patch:

1)struct fsxattr fsx_xflags has its own flags definition
like FS_XFLAG_XXX, we should use proper convert macro for
it, here we used wrong constant flag for project inherit flag.

2)FS_XFLAG_PROJINHERIT is not a valid vfs inode flag, looking
at current linux codes, local filesystem set project inherit
flag on its private flags, we should do similar thing to Lustre

Test-Parameters: trivial testlist=sanity-quota,sanity-quota,sanity-quota
Change-Id: I453db8ed074e8008f0ec145c726d7577121422e6
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-on: https://review.whamcloud.com/32828
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Olaf Weber <olaf.weber@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>